# gt

./: .prettierignore  .prettierrc  CHANGELOG.md  Cargo.toml  HACKATHON_FEATURES.md  PITCH_DECK.md  PRODUCTION_SUMMARY.md  README.md  SECURITY_FIXES.md  TEST_RESULTS.md  ai.md  analysis.md  dfx.json  fix-declarations.sh  idea.md  identity.md  package-lock.json  package.json  project.md
.claude/agents/: icp-canister-builder.md
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/instructions/: add-feature.instructions.md  add-tests.instructions.md  backend-test.instructions.md  frontend-test.instructions.md  general.instructions.md  rust.instructions.md  test.instructions.md  typescript.instructions.md
.github/prompts/: add-backend-feature.prompt.md  add-feature.prompt.md  add-frontend-feature.prompt.md  changes-review.prompt.md  new-canister-function.prompt.md  test-canister-function.prompt.md  update-changelog.prompt.md
.github/workflows/: e2e.yml
scripts/: dev-container-setup.sh  generate-candid.sh  install-cargo-extractor.sh
src/ai_verifier/: Cargo.toml  ai_verifier.did  ai_verifier_simple.did
src/ai_verifier/src/: lib.rs  lib_minimal.rs
src/backend/: Cargo.toml  backend.did
src/backend/src/: a.rs  bridge.rs  i.rs  lib.rs  storage.rs  v1.rs
src/frontend/: frontend-test-setup.ts  index.html  main.tsx  package.json  setupTests.ts  tsconfig.json  vite.config.ts
src/frontend/src/: App.tsx  index.css
src/lending/: Cargo.toml  lending.did
src/lending/src/: lib.rs
src/marketplace/: Cargo.toml  marketplace.did
src/marketplace/src/: lib.rs
src/tests/: actor.js  identity.test.ts  identity.ts  vibe_coding_template_backend.test.ts
src/vibe_coding_template_backend/: Cargo.toml  vibe_coding_template_backend.did
tests/: tsconfig.json  vitest.config.ts
tests/src/: backend.test.ts  vibe_coding_template_backend.test.ts
(+46 files in other folders)
