[package]
name = "marketplace"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Core ICP dependencies
ic-cdk = "0.17"
ic-cdk-macros = "0.17"
ic-stable-structures = "0.6.9"
candid = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"

# Cryptography
sha2 = "0.10"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
k256 = { version = "0.13", features = ["ecdsa", "sha256"] }
getrandom = { version = "0.2", features = ["custom"] }
rand = "0.8"

# Utilities
base64 = "0.22"
hex = "0.4"
ciborium = "0.2"
time = { version = "0.3", features = ["serde"] }
bs58 = "0.4"

# HTTP and networking
ic-http-certification = "2.5"
